# bfc

./: CMakeLists.txt  README.md  compile_commands.json
include/: interpreter.h  interpreter.hpp  lexer.h  lexer.hpp
src/: interpreter.c  interpreter.cpp  lexer.c  lexer.cpp  main.c  main.cpp
